--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/wskirichenko/ws-new_design.git"
+    "url": "git+https://github.com/wskirichenko/ws-new_design.git"
   },
   "keywords": [
     "WebSailors"
@@ -19,7 +19,7 @@
   "bugs": {
     "url": ""
   },
-  "homepage": "https://github.com/wskirichenko/ws-new_design.git",
+  "homepage": "https://github.com/wskirichenko/ws-new_design#readme",
   "dependencies": {
     "browser-sync": "^2.26.3",
     "del": "^3.0.0",
